Closed Bug 334832 Opened 19 years ago Closed 19 years ago

Maximum value of "int" is handled wrong?

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: doronr)

References

()

Details

(Keywords: fixed1.8.0.4, fixed1.8.1)

Attachments

(2 files)

An element set to "xsd:int" is invalid with a value of "2147483647", which is inside the valid range per the XML Schema Specification: "int is ·derived· from long by setting the value of ·maxInclusive· to be 2147483647 and ·minInclusive· to be -2147483648. The ·base type· of int is long." [http://www.w3.org/TR/xmlschema-2/#int] Doron's mumbling something about the error being in XForms land, and not schema-val, but I'll that to him to prove :)
Attached file Testcase
When I added the new types, I forgot to add breaks to the cases (copy paste error!).
Attachment #219155 - Flags: review?(aaronr)
Attachment #219155 - Flags: review?(aaronr) → review+
Comment on attachment 219155 [details] [diff] [review] I am an idiot - missing breaks that's a classic :)
Attachment #219155 - Flags: review+
fixed on trunk, branches closed right now
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Keywords: fixed1.8.1
Keywords: fixed1.8.0.3
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: