Bug 334832 - NPOTDB Maximum value of schema int is handled wrong. r=aaronr