extensions/schema-validation/src/nsSchemaValidator.cpp
@@ -1164,6 +1164,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("9223372036854775807"),
                                  NS_LITERAL_STRING("-9223372036854775808"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#int */
@@ -1174,6 +1175,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("2147483647"),
                                  NS_LITERAL_STRING("-2147483648"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#short */
@@ -1184,6 +1186,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("32767"),
                                  NS_LITERAL_STRING("-32768"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#unsignedLong */
@@ -1194,6 +1197,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("18446744073709551615"),
                                  NS_LITERAL_STRING("0"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#unsignedInt */
@@ -1204,6 +1208,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("4294967295"),
                                  NS_LITERAL_STRING("0"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#unsignedShort */
@@ -1214,6 +1219,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("65535"),
                                  NS_LITERAL_STRING("0"),
                                  nsnull, &isValid);
+      break;
     }
 
     /* http://www.w3.org/TR/xmlschema-2/#unsignedByte */
@@ -1224,6 +1230,7 @@ nsSchemaValidator::ValidateBuiltinType(const nsAString & aNodeValue,
                                  NS_LITERAL_STRING("255"),
                                  NS_LITERAL_STRING("0"),
                                  nsnull, &isValid);
+      break;
     }
 
     case nsISchemaBuiltinType::BUILTIN_TYPE_BYTE: {
